@@ -19,7 +19,6 @@
 package org.apache.felix.framework;
 
 import org.apache.felix.framework.BundleWiringImpl.BundleClassLoader;
-import org.apache.felix.framework.ServiceRegistry.ServiceRegistryCallbacks;
 import org.apache.felix.framework.cache.BundleArchive;
 import org.apache.felix.framework.cache.BundleCache;
 import org.apache.felix.framework.capabilityset.CapabilitySet;
@@ -59,6 +58,7 @@ import org.osgi.framework.ServiceReference;
 import org.osgi.framework.ServiceRegistration;
 import org.osgi.framework.Version;
 import org.osgi.framework.connect.ModuleConnector;
+import org.osgi.framework.hooks.service.ListenerHook;
 import org.osgi.framework.launch.Framework;
 import org.osgi.framework.namespace.HostNamespace;
 import org.osgi.framework.startlevel.FrameworkStartLevel;
@@ -85,6 +85,7 @@ import java.io.PrintWriter;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLStreamHandler;
+import java.nio.charset.StandardCharsets;
 import java.security.AccessControlException;
 import java.security.Permission;
 import java.util.ArrayList;
@@ -107,6 +108,7 @@ import java.util.TreeSet;
 import java.util.WeakHashMap;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.Collectors;
 
 public class Felix extends BundleImpl implements Framework
 {
@@ -136,7 +138,7 @@ public class Felix extends BundleImpl implements Framework
     private final Condition m_bundleLockCondition = m_bundleLock.newCondition();
 
     // Keeps track of threads wanting to acquire the global lock.
-    private final List<Thread> m_globalLockWaitersList = new ArrayList<Thread>();
+    private final List<Thread> m_globalLockWaitersList = new ArrayList<>();
     // The thread currently holding the global lock.
     private Thread m_globalLockThread = null;
     // How many times the global lock was acquired by the thread holding
@@ -146,7 +148,7 @@ public class Felix extends BundleImpl implements Framework
 
     // Maps a bundle location to a bundle location;
     // used to reserve a location when installing a bundle.
-    private final Map<String, String> m_installRequestMap = new HashMap<String, String>();
+    private final Map<String, String> m_installRequestMap = new HashMap<>();
     // This lock must be acquired to modify m_installRequestMap;
     // to help avoid deadlock this lock as priority 1 and should
     // be acquired before locks with lower priority.
@@ -156,9 +158,25 @@ public class Felix extends BundleImpl implements Framework
     // and the other mapping a Long bundle identifier to a bundle.
     // CONCURRENCY: Access guarded by the global lock for writes,
     // but no lock for reads since it is copy on write.
-    private volatile Map[] m_installedBundles;
-    private static final int LOCATION_MAP_IDX = 0;
-    private static final int IDENTIFIER_MAP_IDX = 1;
+    static class Maps {
+        final Map<String, BundleImpl> locationMap;
+        final Map<Long, BundleImpl> identifierMap;
+
+        public Maps()
+        {
+            this.locationMap = new HashMap<>();
+            this.identifierMap = new TreeMap<>();
+        }
+
+        public Maps(Maps other)
+        {
+            this.locationMap = new HashMap<>(other.locationMap);
+            this.identifierMap = new TreeMap<>(other.identifierMap);
+        }
+    }
+
+    private volatile Maps m_installedBundlesMaps = new Maps();
+
     // An array of uninstalled bundles before a refresh occurs.
     // CONCURRENCY: Access guarded by the global lock for writes,
     // but no lock for reads since it is copy on write.
@@ -178,13 +196,13 @@ public class Felix extends BundleImpl implements Framework
     private volatile int m_targetStartLevel = FelixConstants.FRAMEWORK_INACTIVE_STARTLEVEL;
     // Keep track of bundles currently being processed by start level thread.
     private final SortedSet<StartLevelTuple> m_startLevelBundles =
-        new TreeSet<StartLevelTuple>();
+        new TreeSet<>();
 
     // Local bundle cache.
     private BundleCache m_cache = null;
 
     // System bundle activator list.
-    List m_activatorList = null;
+    List<BundleActivator> m_activatorList = null;
 
     // Next available bundle identifier.
     private long m_nextId = 1L;
@@ -350,29 +368,25 @@ public class Felix extends BundleImpl implements Framework
      * @param configMap A map for obtaining configuration properties,
      *        may be <tt>null</tt>.
     **/
-    public Felix(Map configMap)
+    public Felix(Map<String, String> configMap)
     {
         this(configMap, null);
     }
 
-    public Felix(Map configMap, ModuleConnector connectFramework)
+    public Felix(Map<String, String> configMap, ModuleConnector connectFramework)
     {
         super();
         // Copy the configuration properties; convert keys to strings.
-        m_configMutableMap = new StringMap();
+        m_configMutableMap = new StringMap<>();
         if (configMap != null)
         {
-            for (Iterator i = configMap.entrySet().iterator(); i.hasNext(); )
-            {
-                Map.Entry entry = (Map.Entry) i.next();
-                m_configMutableMap.put(entry.getKey().toString(), entry.getValue());
-            }
+            m_configMutableMap.putAll(configMap);
         }
 
 
         // Get any system bundle activators.
-        m_activatorList = (List) m_configMutableMap.remove(FelixConstants.SYSTEMBUNDLE_ACTIVATORS_PROP);
-        m_activatorList = (m_activatorList == null) ? new ArrayList() : new ArrayList(m_activatorList);
+        m_activatorList = (List<BundleActivator>) m_configMutableMap.remove(FelixConstants.SYSTEMBUNDLE_ACTIVATORS_PROP);
+        m_activatorList = (m_activatorList == null) ? new ArrayList<>() : new ArrayList<>(m_activatorList);
 
         m_configMap = createUnmodifiableMap(m_configMutableMap);
 
@@ -433,13 +447,7 @@ public class Felix extends BundleImpl implements Framework
         m_bundleStreamHandler = new URLHandlersBundleStreamHandler(this, m_secureAction);
 
         // Create service registry.
-        m_registry = new ServiceRegistry(m_logger, new ServiceRegistryCallbacks() {
-            @Override
-            public void serviceChanged(ServiceEvent event, Dictionary oldProps)
-            {
-                fireServiceEvent(event, oldProps);
-            }
-        });
+        m_registry = new ServiceRegistry(m_logger, this::fireServiceEvent);
 
         // Create a resolver and its state.
         m_resolver = new StatefulResolver(this, m_registry);
@@ -505,9 +513,9 @@ public class Felix extends BundleImpl implements Framework
         return m_bootPkgWildcards;
     }
 
-    private Map createUnmodifiableMap(Map mutableMap)
+    private <K, V> Map<K, V> createUnmodifiableMap(Map<K, V> mutableMap)
     {
-        Map result = Collections.unmodifiableMap(mutableMap);
+        Map<K, V> result = Collections.unmodifiableMap(mutableMap);
 
         // Work around a bug in certain version of J9 where a call to
         // Collections.unmodifiableMap().keySet().iterator() throws
@@ -645,7 +653,7 @@ public class Felix extends BundleImpl implements Framework
     @Override
     public void init() throws BundleException
     {
-        init(null);
+        init((FrameworkListener[]) null);
     }
 
     /**
@@ -669,7 +677,7 @@ public class Felix extends BundleImpl implements Framework
                         throw new SecurityException("SecurityManager already installed");
                     }
                     security = security.trim();
-                    if (Constants.FRAMEWORK_SECURITY_OSGI.equalsIgnoreCase(security) || (security.length() == 0))
+                    if (Constants.FRAMEWORK_SECURITY_OSGI.equalsIgnoreCase(security) || (security.isEmpty()))
                     {
                         System.setSecurityManager(m_securityManager = new SecurityManager());
                     }
@@ -741,17 +749,13 @@ public class Felix extends BundleImpl implements Framework
                 }
 
                 // Initialize installed bundle data structures.
-                Map[] maps = new Map[] {
-                    new HashMap<String, BundleImpl>(1),
-                    new TreeMap<Long, BundleImpl>()
-                };
-                m_uninstalledBundles = new ArrayList<BundleImpl>(0);
+                Maps maps = new Maps();
+                m_uninstalledBundles = new ArrayList<>(0);
 
                 // Add the system bundle to the set of installed bundles.
-                maps[LOCATION_MAP_IDX].put(_getLocation(), this);
-                maps[IDENTIFIER_MAP_IDX].put(new Long(0), this);
-                m_installedBundles = maps;
-
+                maps.locationMap.put(_getLocation(), this);
+                maps.identifierMap.put(0L, this);
+                m_installedBundlesMaps = maps;
 
                 try
                 {
@@ -918,25 +922,22 @@ public class Felix extends BundleImpl implements Framework
                     }
                     try
                     {
-                        for (Object bundle : m_installedBundles[IDENTIFIER_MAP_IDX].values())
+                        for (BundleImpl bundle : m_installedBundlesMaps.identifierMap.values())
                         {
                             try
                             {
                                 if (bundle != this)
                                 {
-                                    setBundleProtectionDomain(((BundleImpl) bundle).adapt(BundleRevisionImpl.class));
+                                    setBundleProtectionDomain(bundle.adapt(BundleRevisionImpl.class));
                                 }
                             }
                             catch (Exception ex)
                             {
-                                ((BundleImpl) bundle).close();
-                                maps = new Map[] {
-                                    new HashMap<String, BundleImpl>(m_installedBundles[LOCATION_MAP_IDX]),
-                                    new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
-                                };
-                                maps[LOCATION_MAP_IDX].remove(((BundleImpl) bundle)._getLocation());
-                                maps[IDENTIFIER_MAP_IDX].remove(new Long(((BundleImpl) bundle).getBundleId()));
-                                m_installedBundles = maps;
+                                bundle.close();
+                                maps = new Maps(m_installedBundlesMaps);
+                                maps.locationMap.remove(bundle._getLocation());
+                                maps.identifierMap.remove(bundle.getBundleId());
+                                m_installedBundlesMaps = maps;
 
                                 m_logger.log(
                                     Logger.LOG_ERROR,
@@ -1011,29 +1012,13 @@ public class Felix extends BundleImpl implements Framework
         int lastVersion = 8;
         if (dataFile.isFile())
         {
-            BufferedReader input = null;
-            try
+            try (BufferedReader input = new BufferedReader(new InputStreamReader(m_secureAction.getInputStream(dataFile), StandardCharsets.UTF_8)))
             {
-                input = new BufferedReader(new InputStreamReader(m_secureAction.getInputStream(dataFile), "UTF-8"));
                 lastVersion = Version.parseVersion(input.readLine()).getMajor();
             }
             catch (Exception ignore)
             {
                 getLogger().log(this, Logger.LOG_WARNING, "Unable to parse last java version", ignore);
-            }
-            finally
-            {
-                if (input != null)
-                {
-                    try
-                    {
-                        input.close();
-                    }
-                    catch (Exception ignore)
-                    {
-
-                    }
-                }
             }
         }
 
@@ -1042,32 +1027,15 @@ public class Felix extends BundleImpl implements Framework
             lastVersion = 8;
         }
 
-        PrintWriter output = null;
-
-        try
+        try (PrintWriter output = new PrintWriter(new OutputStreamWriter(
+            m_secureAction.getOutputStream(getDataFile(this, "last.java.version")), StandardCharsets.UTF_8)))
         {
-            output = new PrintWriter(new OutputStreamWriter(
-                m_secureAction.getOutputStream(getDataFile(this, "last.java.version")), "UTF-8"));
-            output.println(Integer.toString(currentVersion));
+            output.println(currentVersion);
             output.flush();
         }
         catch (Exception ignore)
         {
             getLogger().log(this, Logger.LOG_WARNING, "Unable to persist current java version", ignore);
-        }
-        finally
-        {
-            if (output != null)
-            {
-                try
-                {
-                    output.close();
-                }
-                catch (Exception ignore)
-                {
-
-                }
-            }
         }
         return currentVersion != lastVersion;
     }
@@ -1159,11 +1127,11 @@ public class Felix extends BundleImpl implements Framework
     @Override
     public void stop() throws BundleException
     {
-        Object sm = System.getSecurityManager();
+        SecurityManager sm = System.getSecurityManager();
 
         if (sm != null)
         {
-            ((SecurityManager) sm).checkPermission(new AdminPermission(this,
+            sm.checkPermission(new AdminPermission(this,
                 AdminPermission.EXECUTE));
         }
 
@@ -1253,11 +1221,11 @@ public class Felix extends BundleImpl implements Framework
     @Override
     public void update(InputStream is) throws BundleException
     {
-        Object sm = System.getSecurityManager();
+        SecurityManager sm = System.getSecurityManager();
 
         if (sm != null)
         {
-            ((SecurityManager) sm).checkPermission(new AdminPermission(this,
+            sm.checkPermission(new AdminPermission(this,
                 AdminPermission.EXECUTE));
         }
 
@@ -1272,110 +1240,102 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // Then to stop and restart the framework on a separate thread.
-        new Thread(new Runnable() {
-            @Override
-            public void run()
+        new Thread(() -> {
+            try
             {
+                // First acquire the system bundle lock to verify the state.
+                acquireBundleLock(Felix.this, Bundle.STARTING | Bundle.ACTIVE);
+                // Set the reason for the shutdown.
+                m_shutdownGate.setMessage(
+                    new FrameworkEvent(FrameworkEvent.STOPPED_UPDATE, Felix.this, null));
+                // Record the state and stop the system bundle.
+                int oldState = Felix.this.getState();
                 try
                 {
-                    // First acquire the system bundle lock to verify the state.
-                    acquireBundleLock(Felix.this, Bundle.STARTING | Bundle.ACTIVE);
-                    // Set the reason for the shutdown.
-                    m_shutdownGate.setMessage(
-                        new FrameworkEvent(FrameworkEvent.STOPPED_UPDATE, Felix.this, null));
-                    // Record the state and stop the system bundle.
-                    int oldState = Felix.this.getState();
-                    try
-                    {
-                        stop();
-                    }
-                    catch (BundleException ex)
-                    {
-                        m_logger.log(Logger.LOG_WARNING, "Exception stopping framework.", ex);
-                    }
-                    finally
-                    {
-                        releaseBundleLock(Felix.this);
-                    }
-
-                    // Make sure the framework is stopped.
-                    try
-                    {
-                        waitForStop(0);
-                    }
-                    catch (InterruptedException ex)
-                    {
-                        m_logger.log(Logger.LOG_WARNING, "Did not wait for framework to stop.", ex);
-                    }
-
-                    // Depending on the old state, restart the framework.
-                    try
-                    {
-                        switch (oldState)
-                        {
-                            case Bundle.STARTING:
-                                init();
-                                break;
-                            case Bundle.ACTIVE:
-                                start();
-                                break;
-                        }
-                    }
-                    catch (BundleException ex)
-                    {
-                        m_logger.log(Logger.LOG_WARNING, "Exception restarting framework.", ex);
-                    }
+                    stop();
                 }
-                catch (Exception ex)
+                catch (BundleException ex)
                 {
-                    m_logger.log(Logger.LOG_WARNING, "Cannot update an inactive framework.");
+                    m_logger.log(Logger.LOG_WARNING, "Exception stopping framework.", ex);
                 }
+                finally
+                {
+                    releaseBundleLock(Felix.this);
+                }
+
+                // Make sure the framework is stopped.
+                try
+                {
+                    waitForStop(0);
+                }
+                catch (InterruptedException ex)
+                {
+                    m_logger.log(Logger.LOG_WARNING, "Did not wait for framework to stop.", ex);
+                }
+
+                // Depending on the old state, restart the framework.
+                try
+                {
+                    switch (oldState)
+                    {
+                        case Bundle.STARTING:
+                            init();
+                            break;
+                        case Bundle.ACTIVE:
+                            start();
+                            break;
+                    }
+                }
+                catch (BundleException ex)
+                {
+                    m_logger.log(Logger.LOG_WARNING, "Exception restarting framework.", ex);
+                }
+            }
+            catch (Exception ex)
+            {
+                m_logger.log(Logger.LOG_WARNING, "Cannot update an inactive framework.");
             }
         }).start();
     }
 
     private void stopRefresh() throws BundleException
     {
-        Object sm = System.getSecurityManager();
+        SecurityManager sm = System.getSecurityManager();
 
         if (sm != null)
         {
-            ((SecurityManager) sm).checkPermission(new AdminPermission(this,
+            sm.checkPermission(new AdminPermission(this,
                     AdminPermission.EXECUTE));
         }
 
 
         // Stop the framework on a separate thread.
-        new Thread(new Runnable() {
-            @Override
-            public void run()
+        new Thread(() -> {
+            try
             {
+                // First acquire the system bundle lock to verify the state.
+                acquireBundleLock(Felix.this, Bundle.STARTING | Bundle.ACTIVE);
+                // Set the reason for the shutdown.
+                m_shutdownGate.setMessage(
+                        new FrameworkEvent(FrameworkEvent.STOPPED_SYSTEM_REFRESHED, Felix.this, null));
+                // Record the state and stop the system bundle.
+                int oldState = Felix.this.getState();
                 try
                 {
-                    // First acquire the system bundle lock to verify the state.
-                    acquireBundleLock(Felix.this, Bundle.STARTING | Bundle.ACTIVE);
-                    // Set the reason for the shutdown.
-                    m_shutdownGate.setMessage(
-                            new FrameworkEvent(FrameworkEvent.STOPPED_SYSTEM_REFRESHED, Felix.this, null));
-                    // Record the state and stop the system bundle.
-                    int oldState = Felix.this.getState();
-                    try
-                    {
-                        stop();
-                    }
-                    catch (BundleException ex)
-                    {
-                        m_logger.log(Logger.LOG_WARNING, "Exception stopping framework.", ex);
-                    }
-                    finally
-                    {
-                        releaseBundleLock(Felix.this);
-                    }
+                    stop();
                 }
-                catch (Exception ex)
+                catch (BundleException ex)
                 {
-                    m_logger.log(Logger.LOG_WARNING, "Cannot update an inactive framework.");
+                    m_logger.log(Logger.LOG_WARNING, "Exception stopping framework.", ex);
                 }
+                finally
+                {
+                    releaseBundleLock(Felix.this);
+                }
+            }
+            catch (Exception ex)
+            {
+                m_logger.log(Logger.LOG_WARNING, "Cannot update an inactive framework.");
             }
         }).start();
     }
@@ -1841,9 +1801,9 @@ public class Felix extends BundleImpl implements Framework
      * @param locale
      * @return localized bundle headers dictionary.
     **/
-    Dictionary getBundleHeaders(BundleImpl bundle, String locale)
+    Dictionary<String, String> getBundleHeaders(BundleImpl bundle, String locale)
     {
-        return new MapToDictionary(bundle.getCurrentLocalizedHeader(locale));
+        return new MapToDictionary<>(bundle.getCurrentLocalizedHeader(locale));
     }
 
     /**
@@ -1888,7 +1848,7 @@ public class Felix extends BundleImpl implements Framework
     /**
      * Implementation for Bundle.getResources().
     **/
-    Enumeration getBundleResources(BundleImpl bundle, String name)
+    Enumeration<URL> getBundleResources(BundleImpl bundle, String name)
     {
         if (bundle.getState() == Bundle.UNINSTALLED)
         {
@@ -2030,17 +1990,15 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // Filter list of registered service references.
-        ServiceReference[] refs = m_registry.getRegisteredServices(bundle);
 
-        return refs;
+        return m_registry.getRegisteredServices(bundle);
     }
 
     ServiceReference[] getBundleServicesInUse(Bundle bundle)
     {
         // Filter list of "in use" service references.
-        ServiceReference[] refs = m_registry.getServicesInUse(bundle);
 
-        return refs;
+        return m_registry.getServicesInUse(bundle);
     }
 
     boolean bundleHasPermission(BundleImpl bundle, Object obj)
@@ -2054,12 +2012,10 @@ public class Felix extends BundleImpl implements Framework
         {
             try
             {
-                return (obj instanceof java.security.Permission)
-                    ? impliesBundlePermission(
+                return obj instanceof Permission && impliesBundlePermission(
                     (BundleProtectionDomain)
-                    bundle.getProtectionDomain(),
-                    (java.security.Permission) obj, true)
-                    : false;
+                        bundle.getProtectionDomain(),
+                    (Permission) obj, true);
             }
             catch (Exception ex)
             {
@@ -2106,14 +2062,13 @@ public class Felix extends BundleImpl implements Framework
         // We do not call getClassLoader().loadClass() for arrays because
         // it does not correctly handle array types, which is necessary in
         // cases like deserialization using a wrapper class loader.
-        if ((name != null) && (name.length() > 0) && (name.charAt(0) == '['))
+        if ((name != null) && (!name.isEmpty()) && (name.charAt(0) == '['))
         {
             return Class.forName(name, false,
-                ((BundleWiringImpl) bundle.adapt(BundleWiring.class)).getClassLoader());
+                bundle.adapt(BundleWiring.class).getClassLoader());
         }
 
-        return ((BundleWiringImpl)
-            bundle.adapt(BundleWiring.class)).getClassLoader().loadClass(name);
+        return bundle.adapt(BundleWiring.class).getClassLoader().loadClass(name);
     }
 
     /**
@@ -2254,9 +2209,10 @@ public class Felix extends BundleImpl implements Framework
                         boolean found = false;
                         for (StartLevelTuple tuple : m_startLevelBundles)
                         {
-                            if (tuple.m_bundle == bundle)
+                            if ( tuple.m_bundle == bundle )
                             {
                                 found = true;
+                                break;
                             }
                         }
 
@@ -2542,9 +2498,8 @@ public class Felix extends BundleImpl implements Framework
             final int oldState = bundle.getState();
 
             // First get the update-URL from our header.
-            String updateLocation = (String)
-                ((BundleRevisionImpl) bundle.adapt(BundleRevision.class))
-                    .getHeaders().get(Constants.BUNDLE_UPDATELOCATION);
+            String updateLocation = ((BundleRevisionImpl) bundle.adapt(BundleRevision.class))
+                .getHeaders().get(Constants.BUNDLE_UPDATELOCATION);
 
             // If no update location specified, use original location.
             if (updateLocation == null)
@@ -2579,11 +2534,11 @@ public class Felix extends BundleImpl implements Framework
                     // Verify bundle revision.
                     try
                     {
-                        Object sm = System.getSecurityManager();
+                        SecurityManager sm = System.getSecurityManager();
 
                         if (sm != null)
                         {
-                            ((SecurityManager) sm).checkPermission(
+                            sm.checkPermission(
                                 new AdminPermission(bundle, AdminPermission.LIFECYCLE));
                         }
 
@@ -2659,7 +2614,7 @@ public class Felix extends BundleImpl implements Framework
                         {
                             try
                             {
-                                List<Bundle> list = new ArrayList<Bundle>(1);
+                                List<Bundle> list = new ArrayList<>(1);
                                 list.add(bundle);
                                 refreshPackages(list, null);
                             }
@@ -2956,15 +2911,12 @@ public class Felix extends BundleImpl implements Framework
             {
                 // Use a copy-on-write approach to remove the bundle
                 // from the installed maps.
-                Map[] maps = new Map[] {
-                    new HashMap<String, BundleImpl>(m_installedBundles[LOCATION_MAP_IDX]),
-                    new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
-                };
-                target = (BundleImpl) maps[LOCATION_MAP_IDX].remove(bundle._getLocation());
+                Maps maps = new Maps(m_installedBundlesMaps);
+                target = maps.locationMap.remove(bundle._getLocation());
                 if (target != null)
                 {
-                    maps[IDENTIFIER_MAP_IDX].remove(new Long(target.getBundleId()));
-                    m_installedBundles = maps;
+                    maps.identifierMap.remove(target.getBundleId());
+                    m_installedBundlesMaps = maps;
 
                     // Set the bundle's persistent state to uninstalled.
                     bundle.setPersistentStateUninstalled();
@@ -3009,12 +2961,12 @@ public class Felix extends BundleImpl implements Framework
         {
             // Populate a set of refresh candidates. This also includes any bundles that this bundle
             // is wired to but have previously been uninstalled.
-            Set<Bundle> refreshCandidates = addUninstalled(bundle, new LinkedHashSet<Bundle>());
+            Set<Bundle> refreshCandidates = addUninstalled(bundle, new LinkedHashSet<>());
 
             try
             {
                 // First see if we can throw away the complete graph
-                Set<Bundle> dependent = new HashSet<Bundle>();
+                Set<Bundle> dependent = new HashSet<>();
                 for (Bundle b : refreshCandidates)
                 {
                     populateDependentGraph(b, dependent);
@@ -3090,7 +3042,7 @@ public class Felix extends BundleImpl implements Framework
                 }
             }
         }
-        Set<Bundle> dependent = populateDependentGraph(bundle, new HashSet<Bundle>());
+        Set<Bundle> dependent = populateDependentGraph(bundle, new HashSet<>());
         for (Bundle b : dependent)
         {
             if (b.getState() == Bundle.UNINSTALLED && !refreshCandidates.contains(b))
@@ -3188,13 +3140,10 @@ public class Felix extends BundleImpl implements Framework
 
                 // Use a copy-on-write approach to add the bundle
                 // to the installed maps.
-                Map[] maps = new Map[] {
-                    new HashMap<String, BundleImpl>(m_installedBundles[LOCATION_MAP_IDX]),
-                    new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
-                };
-                maps[LOCATION_MAP_IDX].put(bundle._getLocation(), bundle);
-                maps[IDENTIFIER_MAP_IDX].put(new Long(bundle.getBundleId()), bundle);
-                m_installedBundles = maps;
+                Maps maps = new Maps(m_installedBundlesMaps);
+                maps.locationMap.put(bundle._getLocation(), bundle);
+                maps.identifierMap.put(bundle.getBundleId(), bundle);
+                m_installedBundlesMaps = maps;
             }
             finally
             {
@@ -3294,10 +3243,10 @@ public class Felix extends BundleImpl implements Framework
 
                     if (!bundle.isExtension())
                     {
-                        Object sm = System.getSecurityManager();
+                        SecurityManager sm = System.getSecurityManager();
                         if (sm != null)
                         {
-                            ((SecurityManager) sm).checkPermission(
+                            sm.checkPermission(
                                 new AdminPermission(bundle, AdminPermission.LIFECYCLE));
                         }
                     }
@@ -3353,13 +3302,10 @@ public class Felix extends BundleImpl implements Framework
                 {
                     // Use a copy-on-write approach to add the bundle
                     // to the installed maps.
-                    Map[] maps = new Map[] {
-                        new HashMap<String, BundleImpl>(m_installedBundles[LOCATION_MAP_IDX]),
-                        new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
-                    };
-                    maps[LOCATION_MAP_IDX].put(location, bundle);
-                    maps[IDENTIFIER_MAP_IDX].put(new Long(bundle.getBundleId()), bundle);
-                    m_installedBundles = maps;
+                    Maps tmpMaps = new Maps(m_installedBundlesMaps);
+                    tmpMaps.locationMap.put(location, bundle);
+                    tmpMaps.identifierMap.put(bundle.getBundleId(), bundle);
+                    m_installedBundlesMaps = tmpMaps;
                 }
                 finally
                 {
@@ -3397,9 +3343,9 @@ public class Felix extends BundleImpl implements Framework
                     getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
             if (!hooks.isEmpty())
             {
-                Collection<Bundle> bundles = new ArrayList<Bundle>(1);
+                Collection<Bundle> bundles = new ArrayList<>(1);
                 bundles.add(existing);
-                bundles = new ShrinkableCollection<Bundle>(bundles);
+                bundles = new ShrinkableCollection<>(bundles);
                 for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
                 {
                     org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3456,7 +3402,7 @@ public class Felix extends BundleImpl implements Framework
     **/
     Bundle getBundle(String location)
     {
-        return (Bundle) m_installedBundles[LOCATION_MAP_IDX].get(location);
+        return m_installedBundlesMaps.locationMap.get(location);
     }
 
     /**
@@ -3469,8 +3415,7 @@ public class Felix extends BundleImpl implements Framework
     **/
     Bundle getBundle(BundleContext bc, long id)
     {
-        BundleImpl bundle = (BundleImpl)
-            m_installedBundles[IDENTIFIER_MAP_IDX].get(new Long(id));
+        BundleImpl bundle = m_installedBundlesMaps.identifierMap.get(id);
         if (bundle != null)
         {
             List<BundleImpl> uninstalledBundles = m_uninstalledBundles;
@@ -3491,9 +3436,9 @@ public class Felix extends BundleImpl implements Framework
                 getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
         if (!hooks.isEmpty() && (bundle != null))
         {
-            Collection<Bundle> bundles = new ArrayList<Bundle>(1);
+            Collection<Bundle> bundles = new ArrayList<>(1);
             bundles.add(bundle);
-            bundles = new ShrinkableCollection<Bundle>(bundles);
+            bundles = new ShrinkableCollection<>(bundles);
             for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
             {
                 org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3531,8 +3476,7 @@ public class Felix extends BundleImpl implements Framework
     **/
     Bundle getBundle(long id)
     {
-        BundleImpl bundle = (BundleImpl)
-            m_installedBundles[IDENTIFIER_MAP_IDX].get(new Long(id));
+        BundleImpl bundle = m_installedBundlesMaps.identifierMap.get(id);
         if (bundle != null)
         {
             return bundle;
@@ -3561,14 +3505,14 @@ public class Felix extends BundleImpl implements Framework
      **/
     Bundle[] getBundles(BundleContext bc)
     {
-        Collection<Bundle> bundles = m_installedBundles[IDENTIFIER_MAP_IDX].values();
+        Collection<? extends Bundle> bundles = m_installedBundlesMaps.identifierMap.values();
         if ( !bundles.isEmpty() )
         {
             Set<ServiceReference<org.osgi.framework.hooks.bundle.FindHook>> hooks =
                     getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
             if (!hooks.isEmpty())
             {
-                Collection<Bundle> shrunkBundles = new ShrinkableCollection<Bundle>(new ArrayList<Bundle>(bundles));
+                Collection<Bundle> shrunkBundles = new ShrinkableCollection<>(new ArrayList<>(bundles));
                 for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
                 {
                     org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3608,7 +3552,7 @@ public class Felix extends BundleImpl implements Framework
     **/
     Bundle[] getBundles()
     {
-        Collection<Bundle> bundles = m_installedBundles[IDENTIFIER_MAP_IDX].values();
+        Collection<? extends Bundle> bundles = m_installedBundlesMaps.identifierMap.values();
         return bundles.toArray(new Bundle[bundles.size()]);
     }
 
@@ -3647,7 +3591,7 @@ public class Felix extends BundleImpl implements Framework
                 getHookRegistry().getHooks(org.osgi.framework.hooks.service.ListenerHook.class);
         if (oldFilter != null)
         {
-            final Collection removed = Collections.singleton(
+            final Collection<ListenerHook.ListenerInfo> removed = Collections.singleton(
                 new ListenerInfo(bundle, bundle._getBundleContext(),
                     ServiceListener.class, l, oldFilter, null, true));
             for (ServiceReference<org.osgi.framework.hooks.service.ListenerHook> sr : listenerHooks)
@@ -3673,7 +3617,7 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // Invoke the ListenerHook.added() on all hooks.
-        final Collection added = Collections.singleton(
+        final Collection<ListenerHook.ListenerInfo> added = Collections.singleton(
             new ListenerInfo(bundle, bundle._getBundleContext(),
                 ServiceListener.class, l, newFilter, null, false));
         for (ServiceReference<org.osgi.framework.hooks.service.ListenerHook> sr : listenerHooks)
@@ -3763,8 +3707,8 @@ public class Felix extends BundleImpl implements Framework
      *             service or null.
      * @return A <code>ServiceRegistration</code> object or null.
     **/
-    ServiceRegistration registerService(
-        BundleContextImpl context, String[] classNames, Object svcObj, Dictionary dict)
+    ServiceRegistration<?> registerService(
+        BundleContextImpl context, String[] classNames, Object svcObj, Dictionary<String, ? > dict)
     {
         if (classNames == null)
         {
@@ -3775,29 +3719,29 @@ public class Felix extends BundleImpl implements Framework
             throw new IllegalArgumentException("Service object cannot be null.");
         }
 
-        ServiceRegistration reg = null;
+        ServiceRegistration<?> reg = null;
 
         // Check to make sure that the service object is
         // an instance of all service classes; ignore if
         // service object is a service factory.
         if (!(svcObj instanceof ServiceFactory))
         {
-            for (int i = 0; i < classNames.length; i++)
+            for (String className : classNames)
             {
-                Class clazz = Util.loadClassUsingClass(svcObj.getClass(), classNames[i], m_secureAction);
-                if (clazz == null)
+                Class<?> clazz = Util.loadClassUsingClass(svcObj.getClass(), className, m_secureAction);
+                if ( clazz == null )
                 {
-                    if (!Util.checkImplementsWithName(svcObj.getClass(), classNames[i]))
+                    if ( !Util.checkImplementsWithName(svcObj.getClass(), className) )
                     {
                         throw new IllegalArgumentException(
-                                "Cannot cast service: " + classNames[i]);
+                            "Cannot cast service: " + className);
                     }
                 }
-                else if (!clazz.isAssignableFrom(svcObj.getClass()))
+                else if ( !clazz.isAssignableFrom(svcObj.getClass()) )
                 {
                     throw new IllegalArgumentException(
                         "Service object is not an instance of \""
-                        + classNames[i] + "\".");
+                            + className + "\".");
                 }
             }
         }
@@ -3866,26 +3810,22 @@ public class Felix extends BundleImpl implements Framework
         }
 
         // Ask the service registry for all matching service references.
-        final Collection refList = m_registry.getServiceReferences(className, filter);
+        final Collection<ServiceReference<?>> refList = m_registry.getServiceReferences(className, filter)
+            .stream()
+            .filter(c -> ServiceReference.class.isAssignableFrom(c.getClass()))
+            .map(x -> (ServiceReference<?>) x)
+            .collect(Collectors.<ServiceReference<?>>toList());
 
         // Filter on assignable references
         if (checkAssignable)
         {
-            for (Iterator refIter = refList.iterator(); refIter.hasNext();)
-            {
-                // Get the current service reference.
-                ServiceReference ref = (ServiceReference) refIter.next();
-
-                // Now check for castability.
-                if (!Util.isServiceAssignable(bundle, ref))
-                {
-                    refIter.remove();
-                }
-            }
+            // Get the current service reference.
+            // Now check for castability.
+            refList.removeIf(ref -> !Util.isServiceAssignable(bundle, ref));
         }
 
         // If the requesting bundle is the system bundle, ignore the effects of the findhooks
-        Collection resRefList = (bundle == this ? new ArrayList(refList) : refList);
+        Collection<ServiceReference<?>> resRefList = (bundle == this ? new ArrayList<>(refList) : refList);
 
         // activate findhooks
         Set<ServiceReference<org.osgi.framework.hooks.service.FindHook>> findHooks =
@@ -3903,7 +3843,7 @@ public class Felix extends BundleImpl implements Framework
                         className,
                         expr,
                         !checkAssignable,
-                        new ShrinkableCollection(refList));
+                        new ShrinkableCollection<>(refList));
                 }
                 catch (Throwable th)
                 {
@@ -3920,9 +3860,9 @@ public class Felix extends BundleImpl implements Framework
         // We return resRefList which is normally the same as refList and therefore any modifications
         // to refList are also visible to resRefList. However in the case of the system bundle being
         // the requestor, resRefList is a copy of the original list before the hooks were invoked.
-        if (resRefList.size() > 0)
+        if (!resRefList.isEmpty())
         {
-            return (ServiceReference[]) resRefList.toArray(new ServiceReference[resRefList.size()]);
+            return resRefList.toArray(new ServiceReference[resRefList.size()]);
         }
 
         return null;
@@ -3946,21 +3886,21 @@ public class Felix extends BundleImpl implements Framework
     {
         ServiceReference[] refs = getServiceReferences(bundle, className, expr, checkAssignable);
 
-        Object sm = System.getSecurityManager();
+        SecurityManager sm = System.getSecurityManager();
 
         if ((sm == null) || (refs == null))
         {
             return refs;
         }
 
-        List result = new ArrayList();
+        List<ServiceReference<?>> result = new ArrayList<>();
 
-        for (int i = 0; i < refs.length; i++)
+        for (ServiceReference<?> ref : refs)
         {
             try
             {
-                ((SecurityManager) sm).checkPermission(new ServicePermission(refs[i], ServicePermission.GET));
-                result.add(refs[i]);
+                sm.checkPermission(new ServicePermission(ref, ServicePermission.GET));
+                result.add(ref);
             }
             catch (Exception ex)
             {
@@ -3973,7 +3913,7 @@ public class Felix extends BundleImpl implements Framework
             return null;
         }
 
-        return (ServiceReference[]) result.toArray(new ServiceReference[result.size()]);
+        return result.toArray(new ServiceReference[result.size()]);
 
     }
 
@@ -3991,7 +3931,7 @@ public class Felix extends BundleImpl implements Framework
         return null;
     }
 
-    boolean ungetService(Bundle bundle, ServiceReference ref, Object srvObj)
+    <T> boolean ungetService(Bundle bundle, ServiceReference<T> ref, T srvObj)
     {
         return m_registry.ungetService(bundle, ref, srvObj);
     }
@@ -4036,7 +3976,7 @@ public class Felix extends BundleImpl implements Framework
     //
 
     private final Map<Class, Boolean> m_systemBundleClassCache =
-        new WeakHashMap<Class, Boolean>();
+        new WeakHashMap<>();
 
     /**
      * This method returns the bundle associated with the specified class if
@@ -4097,7 +4037,7 @@ public class Felix extends BundleImpl implements Framework
                     m_systemBundleClassCache.put(clazz, fromSystemBundle);
                 }
             }
-            return fromSystemBundle.booleanValue() ? this : null;
+            return fromSystemBundle ? this : null;
         }
         return null;
     }
@@ -4114,31 +4054,25 @@ public class Felix extends BundleImpl implements Framework
     {
         // First, get all exporters of the package.
         Map<String, Object> attrs = Collections.singletonMap(
-            BundleRevision.PACKAGE_NAMESPACE, (Object) pkgName);
+            BundleRevision.PACKAGE_NAMESPACE, pkgName);
         BundleRequirementImpl req = new BundleRequirementImpl(
             null,
             BundleRevision.PACKAGE_NAMESPACE,
-            Collections.EMPTY_MAP,
+            Collections.emptyMap(),
             attrs);
         List<BundleCapability> exports = m_resolver.findProviders(req, false);
 
         // We only want resolved capabilities.
-        for (Iterator<BundleCapability> it = exports.iterator(); it.hasNext(); )
-        {
-            if (it.next().getRevision().getWiring() == null)
-            {
-                it.remove();
-            }
-        }
+        exports.removeIf(bundleCapability -> bundleCapability.getRevision().getWiring() == null);
 
         if (exports != null)
         {
-            List pkgs = new ArrayList();
+            List<ExportedPackage> pkgs = new ArrayList<>();
 
-            for (Iterator<BundleCapability> it = exports.iterator(); it.hasNext(); )
+            for (BundleCapability export : exports)
             {
                 // Get the bundle associated with the current exporting revision.
-                Bundle bundle = it.next().getRevision().getBundle();
+                Bundle bundle = export.getRevision().getBundle();
 
                 // We need to find the version of the exported package, but this
                 // is tricky since there may be multiple versions of the package
@@ -4156,12 +4090,12 @@ public class Felix extends BundleImpl implements Framework
                     BundleRevision originBr = originRevisions.get(i);
                     List<BundleRevision> revisions = Collections.singletonList(originBr);
 
-                    if ((originBr.getTypes() & BundleRevision.TYPE_FRAGMENT) != 0)
+                    if ( (originBr.getTypes() & BundleRevision.TYPE_FRAGMENT) != 0 )
                     {
                         // If it's a fragment, find the revisions of the attached
                         // bundle(s) and work with those instead. Note that fragments
                         // can be attached to multiple hosts...
-                        revisions = new ArrayList<BundleRevision>();
+                        revisions = new ArrayList<>();
 
                         for (BundleWire bw : originBr.getWiring().getRequiredWires(HostNamespace.HOST_NAMESPACE))
                         {
@@ -4176,8 +4110,8 @@ public class Felix extends BundleImpl implements Framework
                             : br.getWiring().getCapabilities(null);
                         for (BundleCapability cap : caps)
                         {
-                            if (cap.getNamespace().equals(req.getNamespace())
-                                && CapabilitySet.matches(cap, req.getFilter()))
+                            if ( cap.getNamespace().equals(req.getNamespace())
+                                && CapabilitySet.matches(cap, req.getFilter()) )
                             {
                                 pkgs.add(
                                     new ExportedPackageImpl(
@@ -4190,7 +4124,7 @@ public class Felix extends BundleImpl implements Framework
 
             return (pkgs.isEmpty())
                 ? null
-                : (ExportedPackage[]) pkgs.toArray(new ExportedPackage[pkgs.size()]);
+                : pkgs.toArray(new ExportedPackage[pkgs.size()]);
         }
 
         return null;
@@ -4208,7 +4142,7 @@ public class Felix extends BundleImpl implements Framework
     **/
     ExportedPackage[] getExportedPackages(Bundle b)
     {
-        List list = new ArrayList();
+        List<ExportedPackage> list = new ArrayList<>();
 
         // If a bundle is specified, then return its
         // exported packages.
@@ -4243,9 +4177,9 @@ public class Felix extends BundleImpl implements Framework
 
                 // Now get exported packages from installed bundles.
                 Bundle[] bundles = getBundles();
-                for (int bundleIdx = 0; bundleIdx < bundles.length; bundleIdx++)
+                for (Bundle value : bundles)
                 {
-                    BundleImpl bundle = (BundleImpl) bundles[bundleIdx];
+                    BundleImpl bundle = (BundleImpl) value;
                     getExportedPackages(bundle, list);
                 }
             }
@@ -4257,7 +4191,7 @@ public class Felix extends BundleImpl implements Framework
 
         return (list.isEmpty())
             ? null
-            : (ExportedPackage[]) list.toArray(new ExportedPackage[list.size()]);
+            : list.toArray(new ExportedPackage[list.size()]);
     }
 
     /**
@@ -4266,7 +4200,7 @@ public class Felix extends BundleImpl implements Framework
      * @param bundle The bundle from which to retrieve exported packages.
      * @param list The list to which the exported packages are added
     **/
-    private void getExportedPackages(Bundle bundle, List list)
+    private void getExportedPackages(Bundle bundle, List<ExportedPackage> list)
     {
         // Since a bundle may have many revisions associated with it,
         // one for each revision in the cache, search each revision
@@ -4276,14 +4210,12 @@ public class Felix extends BundleImpl implements Framework
             List<BundleCapability> caps = (br.getWiring() == null)
                 ? br.getDeclaredCapabilities(null)
                 : br.getWiring().getCapabilities(null);
-            if ((caps != null) && (caps.size() > 0))
+            if ((caps != null) && (!caps.isEmpty()))
             {
                 for (BundleCapability cap : caps)
                 {
                     if (cap.getNamespace().equals(BundleRevision.PACKAGE_NAMESPACE))
                     {
-                        String pkgName = (String)
-                            cap.getAttributes().get(BundleRevision.PACKAGE_NAMESPACE);
                         list.add(new ExportedPackageImpl(
                             this, (BundleImpl) bundle, br, cap));
                     }
@@ -4327,7 +4259,7 @@ public class Felix extends BundleImpl implements Framework
             if (targets == null)
             {
                 // Add all bundles to the list.
-                targets = m_installedBundles[LOCATION_MAP_IDX].values();
+                targets = (Collection) m_installedBundlesMaps.locationMap.values();
             }
 
             // Now resolve each target bundle.
@@ -4338,7 +4270,7 @@ public class Felix extends BundleImpl implements Framework
             {
                 // Get bundle revisions for bundles in INSTALLED state.
                 Set<BundleRevision> revisions =
-                    new HashSet<BundleRevision>(targets.size());
+                    new HashSet<>(targets.size());
                 for (Bundle b : targets)
                 {
                     if (b.getState() != Bundle.UNINSTALLED)
@@ -4367,14 +4299,11 @@ public class Felix extends BundleImpl implements Framework
                         }
                     }
                 }
-                catch (ResolutionException ex)
+                catch (ResolutionException | BundleException ex)
                 {
                     result = false;
                 }
-                catch (BundleException ex)
-                {
-                    result = false;
-                }
+
             }
 
             return result;
@@ -4421,7 +4350,7 @@ public class Felix extends BundleImpl implements Framework
         Collection<Bundle> newTargets = targets;
         if (newTargets == null)
         {
-            List<Bundle> list = new ArrayList<Bundle>();
+            List<Bundle> list = new ArrayList<>();
 
             // First add all uninstalled bundles.
             for (int i = 0;
@@ -4432,11 +4361,9 @@ public class Felix extends BundleImpl implements Framework
             }
 
             // Then add all updated bundles.
-            Iterator iter = m_installedBundles[LOCATION_MAP_IDX].values().iterator();
-            while (iter.hasNext())
+            for (BundleImpl bundle : m_installedBundlesMaps.locationMap.values())
             {
-                BundleImpl bundle = (BundleImpl) iter.next();
-                if (bundle.isRemovalPending())
+                if ( bundle.isRemovalPending() )
                 {
                     list.add(bundle);
                 }
@@ -4454,7 +4381,7 @@ public class Felix extends BundleImpl implements Framework
         {
             // Create map of bundles that import the packages
             // from the target bundles.
-            bundles = new HashSet<Bundle>();
+            bundles = new HashSet<>();
             for (Bundle target : newTargets)
             {
                 // If anyone passes in a null bundle, then just
@@ -4465,7 +4392,7 @@ public class Felix extends BundleImpl implements Framework
                     // bundles to be refreshed.
                     bundles.add(target);
                     // Add all importing bundles to map.
-                    populateDependentGraph((BundleImpl) target, bundles);
+                    populateDependentGraph(target, bundles);
                 }
             }
         }
@@ -4507,7 +4434,7 @@ public class Felix extends BundleImpl implements Framework
                     // packages from these bundles.
 
                     // Create refresh helpers for each bundle.
-                    List<RefreshHelper> helpers = new ArrayList<RefreshHelper>(bundles.size());
+                    List<RefreshHelper> helpers = new ArrayList<>(bundles.size());
                     for (Bundle b : bundles)
                     {
                         // Remove any targeted bundles from the uninstalled bundles
@@ -4617,19 +4544,19 @@ public class Felix extends BundleImpl implements Framework
         try
         {
             // If there are targets, then find all dependencies for each one.
-            Set<Bundle> bundles = Collections.EMPTY_SET;
+            Set<Bundle> bundles = Collections.emptySet();
             if (targets != null)
             {
                 // Create map of bundles that import the packages
                 // from the target bundles.
-                bundles = new HashSet<Bundle>();
+                bundles = new HashSet<>();
                 for (Bundle target : targets)
                 {
                     // Add the current target bundle to the map of
                     // bundles to be refreshed.
                     bundles.add(target);
                     // Add all importing bundles to map.
-                    populateDependentGraph((BundleImpl) target, bundles);
+                    populateDependentGraph(target, bundles);
                 }
             }
             return bundles;
@@ -4657,7 +4584,7 @@ public class Felix extends BundleImpl implements Framework
                     // Add each dependent bundle to set.
                     set.add(b);
                     // Now recurse into each bundle to get its dependents.
-                    set = populateDependentGraph((BundleImpl) b, set);
+                    set = populateDependentGraph(b, set);
                 }
             }
         }
@@ -4681,13 +4608,10 @@ public class Felix extends BundleImpl implements Framework
 
         try
         {
-            List<Bundle> bundles = new ArrayList<Bundle>();
+            List<Bundle> bundles = new ArrayList<>();
             if (m_uninstalledBundles != null)
             {
-                for (Bundle b : m_uninstalledBundles)
-                {
-                    bundles.add(b);
-                }
+                bundles.addAll(m_uninstalledBundles);
             }
             for (Bundle b : getBundles())
             {
@@ -4747,8 +4671,9 @@ public class Felix extends BundleImpl implements Framework
         {
             Bundle source = bundleProtectionDomain.getBundle();
 
-            return (m_securityDefaultPolicy && (source == null || source.getBundleId() != 0)) ?
-                bundleProtectionDomain.superImplies(permission) : true;
+            return !m_securityDefaultPolicy
+                || (source != null && source.getBundleId() == 0)
+                || bundleProtectionDomain.superImplies(permission);
         }
     }
 
@@ -4761,13 +4686,13 @@ public class Felix extends BundleImpl implements Framework
 
         // Get the activator class from the header map.
         BundleActivator activator = null;
-        Map headerMap = ((BundleRevisionImpl) impl.adapt(BundleRevision.class)).getHeaders();
-        String className = (String) headerMap.get(Constants.BUNDLE_ACTIVATOR);
+        Map<String, String> headerMap = ((BundleRevisionImpl) impl.adapt(BundleRevision.class)).getHeaders();
+        String className = headerMap.get(Constants.BUNDLE_ACTIVATOR);
         // Try to instantiate activator class if present.
         if (className != null)
         {
             className = className.trim();
-            Class clazz;
+            Class<?> clazz;
             try
             {
                 clazz = ((BundleWiringImpl)
@@ -4777,7 +4702,7 @@ public class Felix extends BundleImpl implements Framework
             {
                 throw new BundleException("Not found: " + className, ex);
             }
-            activator = (BundleActivator) clazz.newInstance();
+            activator = (BundleActivator) clazz.getConstructor().newInstance();
         }
 
         return activator;
@@ -5172,10 +5097,10 @@ public class Felix extends BundleImpl implements Framework
 
             // Refresh all updated bundles.
             Bundle[] bundles = getBundles();
-            for (int i = 0; i < bundles.length; i++)
+            for (Bundle value : bundles)
             {
-                BundleImpl bundle = (BundleImpl) bundles[i];
-                if (bundle.isRemovalPending())
+                BundleImpl bundle = (BundleImpl) value;
+                if ( bundle.isRemovalPending() )
                 {
                     try
                     {
@@ -5210,19 +5135,18 @@ public class Felix extends BundleImpl implements Framework
 
             // Dispose of the bundles to close their associated contents.
             bundles = getBundles();
-            for (int i = 0; i < bundles.length; i++)
+            for (Bundle bundle : bundles)
             {
-                ((BundleImpl) bundles[i]).close();
+                ((BundleImpl) bundle).close();
             }
 
             m_extensionManager.stopExtensionBundles(Felix.this);
             // Stop all system bundle activators.
-            for (int i = 0; i < m_activatorList.size(); i++)
+            for (BundleActivator bundleActivator : m_activatorList)
             {
                 try
                 {
-                    Felix.m_secureAction.stopActivator((BundleActivator)
-                        m_activatorList.get(i), _getBundleContext());
+                    Felix.m_secureAction.stopActivator(bundleActivator, _getBundleContext());
                 }
                 catch (Throwable throwable)
                 {
